force-app/main/default/objects/Project__c/fields/Completion_ETA__c.field-meta.xml
<CustomField>
    <fullName>Completion_ETA__c</fullName>
    <description>Expected completion date</description>
    <inlineHelpText>Expected completion date</inlineHelpText>
    <label>Completion ETA</label>
    <type>Date</type>
</CustomField>