force-app/main/default/objects/Project__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Highlighted on home/landing pages</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>