force-app/main/default/objects/Project__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>IF(
  ISBLANK(Address_Line_1__c),
  &quot;&quot;,
  Address_Line_1__c &amp; &quot;, &quot;
) &amp;
IF(
  ISBLANK(Address_Line_2__c),
  &quot;&quot;,
  Address_Line_2__c &amp; &quot;, &quot;
) &amp;
IF(
  ISBLANK(City__c),
  &quot;&quot;,
  City__c &amp; &quot;, &quot;
) &amp;
IF(
  ISBLANK(State__c),
  &quot;&quot;,
  State__c &amp; &quot;, &quot;
) &amp;
IF(
  ISBLANK(Postal_Code__c),
  &quot;&quot;,
  Postal_Code__c &amp; &quot;, &quot;
) &amp;
IF(
  ISBLANK(Country__c),
  &quot;&quot;,
  Country__c
)</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>