force-app/main/default/objects/Project__c/fields/Launch_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date_c__c</fullName>
    <label>Launch_Date__c</label>
    <type>Date</type>
</CustomField>