force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Featured__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Units__c</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Project_Image__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>